fix: remove height value for addCategoryModalWrap block

--- a/src/components/userProfileLayout/savingsCategory/savingsCategory.module.scss
+++ b/src/components/userProfileLayout/savingsCategory/savingsCategory.module.scss
@@ -8,8 +8,8 @@
 	z-index: 120;
 }
 .addCategoryModalWrap {
+	margin-top: 16px;
 	width: 548px;
-	height: 498px;
 	margin-inline: auto;
 	border-radius: 12px;
 	background: var(--color-pure-light);
@@ -32,7 +32,7 @@
 	width: 76%;
 	height: 100%;
 	margin-inline: auto;
-	padding: 50px 0;
+	padding: 50px 0 40px;
 
 	@media (max-width: 570px) {
 		& {
